added the product querying
